# RobSharper.Ros.MessageCli

./: .gitlab-ci.yml  README.md  RosMessageParserCli.sln
RobSharper.Ros.Adapters.UmlRobotics/: RobSharper.Ros.Adapters.UmlRobotics.csproj
RobSharper.Ros.MessageCli/: CodeGenerationConfiguration.cs  ExitCodes.cs  Program.cs  RobSharper.Ros.MessageCli.csproj  appsettings.json  config.json
RobSharper.Ros.MessageCli.Tests/: RobSharper.Ros.MessageCli.Tests.csproj
RobSharper.Ros.MessageCli.Tests/CodeGeneration/: BuildOrdererTests.cs  CodeGenerationContextTests.cs  IRosMessagePackageParserTests.cs  PackageRegistryMessageParserAdapterTests.cs  RosPackageInfoTests.cs  TestUtils.cs
RobSharper.Ros.MessageCli.Tests/TestPackages/valid/test_srv_msgs/: package.xml
RobSharper.Ros.MessageCli.Tests/TestPackages/valid/test_srv_msgs/srv/: GetA.srv  GetATolerance.srv
RobSharper.Ros.MessageCli/CodeGeneration/: BuildOrderer.cs  CodeGeneration.cs  CodeGenerationContext.cs  CodeGenerationOptions.cs  CodeGenerationPackageContext.cs  DotNetProcess.cs  INameFormatter.cs  IResourceNamingConvention.cs  IRosPackageGeneratorFactory.cs  NameMapper.cs  PackageFolder.cs  RosMessageParserFactory.cs  RosPackageFolder.cs  RosPackageFolderExtensions.cs  RosPackageInfo.cs  RosTypeInfoExtensions.cs
RobSharper.Ros.MessageCli/ColorfulConsoleLogging/: ColorfulConsoleLogger.cs  ColorfulConsoleLoggerConfiguration.cs  ColorfulConsoleLoggerExtensions.cs  ColorfulConsoleLoggerProvider.cs  ConsoleColorScope.cs
RobSharper.Ros.MessageCli/Configuration/: CodeGeneratorConfigurationOptions.cs  (+5 more)
(+38 files in other folders)
